re-add footer link imgs

--- a/index.html
+++ b/index.html
@@ -1382,7 +1382,8 @@
       <footer class="site-colophon">
         <div class="row">
           <div class="small-12 columns">
-            <p class="project-contact-info text-center medium-text-left"><br><a href="http://www.downtowngr.org/"></a><a href="http://grcity.us/"></a><a href="http://www.grps.org/"></a></p>
+            <!-- <p class="project-contact-info text-center medium-text-left"><br><a href="http://www.downtowngr.org/"></a><a href="http://grcity.us/"></a><a href="http://www.grps.org/"></a></p> -->
+            <div class="footer-logos"><a href="http://www.downtowngr.org/"><img class="footer-logo" src="//openplans.github.io/planbox-themes/grandrapids-forward/images/dgri-logo.png" /></a><a href="http://grcity.us/"><img class="footer-logo" src="//openplans.github.io/planbox-themes/grandrapids-forward/images/City-of-GR.png" /></a><a href="http://www.grps.org/"><img class="footer-logo" src="//openplans.github.io/planbox-themes/grandrapids-forward/images/grps-logo.png" /></a></div>
             <p class="powered-by text-center medium-text-right text-small">Powered by <a href="http://openplans.org/">OpenPlans.org</a>.</p>
           </div>
         </div>
