fix magellan menu

--- a/index.html
+++ b/index.html
@@ -79,20 +79,7 @@
             </div>
           </div>
           <div class="project-menu-container  has-project-menu">
-            <div class="project-menu" data-magellan-expedition-clone="">
-              <div class="row container">
-                <div class="small-12 columns">
-                  <ul class="sub-nav">
-                    <li data-magellan-arrival="home" class="active"><a href="#home">Home</a></li>
-                    <li data-magellan-arrival="section-news" class=""><a href="#section-news">News</a></li>
-                    <li data-magellan-arrival="section-the-plan"><a href="#section-the-plan">The Plan</a></li>
-                    <li data-magellan-arrival="section-get-involved"><a href="#section-get-involved">Get Involved</a></li>
-                    <li data-magellan-arrival="section-timeline"><a href="#section-timeline">Timeline</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div data-magellan-expedition="fixed" class="project-menu fixed" style="">
+            <div data-magellan-expedition="fixed" class="project-menu" style="">
               <div class="row container">
                 <div class="small-12 columns">
                   <ul class="sub-nav">
