removing links to survey

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p class="text-large tiny-margin-bottom">Please join your neighbors at the meetings in your area. Your voice is important!</p><a href="#section-timeline" class="button large radius"><small style="display:block;font-weight:normal;">VIEW THE TIMELINE TO</small>Find A Meeting Near You</a>
               </div>
               <div class="columns large-5" style="margin:0;">
-                <p class="text-large tiny-margin-bottom">Do you live or work in downtown Grand Rapids? Please take a few minutes to complete the GR Forward survey!</p><a href="https://openplans.typeform.com/to/yWWQdL" class="button large less-padding radius">I live Downtown</a> <a href="https://openplans.typeform.com/to/EQ494E" class="button large less-padding radius">I work Downtown</a>
+                <!-- side box -->
               </div>
             </div>
           </section>
