--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
                       </div>
                     </div>
                   </li>
+                  
+                  <!-- this is a new event -->
                   <li class="event">
                     <span id="event-river-restoration-steering-committee" class="event-anchor"></span>
                     <h4 class="event-title no-margin-top"><a href="#" class="show-event-details">River Restoration Steering Committee</a></h4>
