added more comments

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 
       <header data-magellan-destination="home" id="home" class="site-header has-image" style="background-image: url(images/instagram-grid.jpg)">
         <div class="site-header-content">
+		
+		<!-- page header section -->
+		
           <div class="row project-header container">
             <ul class="social-media-list right">
               <li><a class="" href="http://facebook.com/grfwd" target="_blank"><img src="images/social-facebook.gif"></a></li>
@@ -77,6 +80,9 @@
               <a href="#section-the-plan" class="button large expand radius">LEARN MORE</a>
             </div>
           </div>
+		  
+		  <!-- end of page header --> 
+		  
           <div class="project-menu-container  has-project-menu">
             <div data-magellan-expedition="fixed" class="project-menu" style="">
               <div class="row container">
