Add explicit scheme to all URLs

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                   <div class="large-10 large-centered columns">
                     <style>.embed-container { position: relative; padding-bottom: 76%; padding-top: 30px; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
                     <div class="embed-container">
-                      <iframe src="//www.slideshare.net/slideshow/embed_code/41812922" frameborder="0" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" oallowfullscreen="" msallowfullscreen=""></iframe>
+                      <iframe src="http://www.slideshare.net/slideshow/embed_code/41812922" frameborder="0" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" oallowfullscreen="" msallowfullscreen=""></iframe>
                     </div>
                   </div>
                 </div>
@@ -1081,7 +1081,7 @@
                       <a href="#" class="grfwd-toggle-link"><h4>Join our mailing list&hellip;</h4></a>
                       <div class="grfwd-toggle-target hide">
                         <!-- Begin MailChimp Signup Form -->
-                        <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+                        <link href="http://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
                         <style type="text/css">
                           #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
                           /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
@@ -1343,7 +1343,7 @@
         <div class="row">
           <div class="small-12 columns">
             <!-- <p class="project-contact-info text-center medium-text-left"><br><a href="http://www.downtowngr.org/"></a><a href="http://grcity.us/"></a><a href="http://www.grps.org/"></a></p> -->
-            <div class="footer-logos"><a href="http://www.downtowngr.org/"><img class="footer-logo" src="//openplans.github.io/planbox-themes/grandrapids-forward/images/dgri-logo.png" /></a><a href="http://grcity.us/"><img class="footer-logo" src="//openplans.github.io/planbox-themes/grandrapids-forward/images/City-of-GR.png" /></a><a href="http://www.grps.org/"><img class="footer-logo" src="//openplans.github.io/planbox-themes/grandrapids-forward/images/grps-logo.png" /></a></div>
+            <div class="footer-logos"><a href="http://www.downtowngr.org/"><img class="footer-logo" src="http://openplans.github.io/planbox-themes/grandrapids-forward/images/dgri-logo.png" /></a><a href="http://grcity.us/"><img class="footer-logo" src="http://openplans.github.io/planbox-themes/grandrapids-forward/images/City-of-GR.png" /></a><a href="http://www.grps.org/"><img class="footer-logo" src="http://openplans.github.io/planbox-themes/grandrapids-forward/images/grps-logo.png" /></a></div>
             <p class="powered-by text-center medium-text-right text-small">Powered by <a href="http://openplans.org/">OpenPlans.org</a>.</p>
           </div>
         </div>
