--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- Google Web Fonts -->
-  <link href='//fonts.googleapis.com/css?family=Bitter:400,700,400italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Bitter:400,700,400italic' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="static/styles/components.min.css" />
   <link rel="stylesheet" href="static/styles/style.min.css" type="text/css" />
@@ -1123,7 +1123,7 @@
                           if (!jqueryLoaded) {
                               var script = document.createElement('script');
                               script.type = 'text/javascript';
-                              script.src = '//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
+                              script.src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
                               head.appendChild(script);
                               if (script.readyState && script.onload!==null){
                                   script.onreadystatechange= function () {
@@ -1373,7 +1373,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
     var isLocalhost = 'grforward.org'.slice(0,9) === 'localhost';
     ga('create', 'UA-47475305-2', isLocalhost ? 'none' : 'auto');
